--- a/StudentResultSystem/students/templates/register.html
+++ b/StudentResultSystem/students/templates/register.html
@@ -40,7 +40,7 @@
       </div>
 
       <div class="auth-footer">
-        <p>Already have an account? <a href="{% url 'login' %}" class="login-link">Login here</a>.</p>
+        <p>Already have an account? <a href="{% url 'login' %}" class="login-link">Login here</a></p>
       </div>
     </form>
   </div>
