--- a/StudentResultSystem/students/templates/subject_list.html
+++ b/StudentResultSystem/students/templates/subject_list.html
@@ -4,40 +4,42 @@
 
 {% block content %}
 <div class="subject-list-container">
-  <h2 class="page-title"><i class="fas fa-book"></i> Subject List</h2>
+  <h2 class="page-title">
+    <i class="fas fa-book"></i> Subject List
+  </h2>
 
-  <div class="actions-bar">
-    <a href="{% url 'add_subject' %}" class="btn-primary">
-      <i class="fas fa-plus-circle"></i> Add Subject
+  <div class="actions-bar mb-4 flex justify-end">
+    <a href="{% url 'add_subject' %}" class="btn btn-primary">
+      <i class="fas fa-plus-circle"></i> Add New Subject
     </a>
   </div>
 
-  <div class="table-wrapper">
+  <div class="table-responsive">
     <table class="styled-table">
       <thead>
         <tr>
-          <th>ID</th>
-          <th>Name</th>
-          <th>Actions</th>
+          <th scope="col">Sr No</th>
+          <th scope="col">Subject Name</th>
+          <th scope="col">Actions</th>
         </tr>
       </thead>
       <tbody>
         {% for subject in subjects %}
         <tr>
-          <td>{{ subject.id }}</td>
+          <td>{{ forloop.counter }}</td>
           <td>{{ subject.name }}</td>
           <td>
-            <a href="{% url 'update_subject' subject.id %}" class="action-link edit">
-              <i class="fas fa-edit"></i> Edit
+            <a href="{% url 'update_subject' subject.id %}" class="action-link edit" title="Edit {{ subject.name }}">
+              <i class="fas fa-edit"></i>
             </a>
-            <a href="{% url 'delete_subject' subject.id %}" class="action-link delete" onclick="return confirm('Are you sure you want to delete this subject?');">
-              <i class="fas fa-trash-alt"></i> Delete
+            <a href="{% url 'delete_subject' subject.id %}" class="action-link delete" title="Delete {{ subject.name }}" onclick="return confirm('Are you sure you want to delete the subject: {{ subject.name }}?');">
+              <i class="fas fa-trash-alt"></i>
             </a>
           </td>
         </tr>
         {% empty %}
         <tr>
-          <td colspan="3" class="no-data">No subjects available.</td>
+          <td colspan="3" class="no-data text-center">No subjects available yet.</td>
         </tr>
         {% endfor %}
       </tbody>
