--- a/StudentResultSystem/templates/base.html
+++ b/StudentResultSystem/templates/base.html
@@ -17,6 +17,9 @@
 
     <meta name="description" content="Student Result Management System" />
     <link rel="icon" type="image/png" href="{% static 'favicon.png' %}" />
+
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0/dist/css/select2.min.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0/dist/js/select2.min.js"></script>
   </head>
 
   <body>
